[package]
name = "rcli"
version = "0.1.0"
resolver = "2"
edition = "2021"
authors = ["Brantleigh Bunting <brantleigh.bunting@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc4 = { path = "../rc4" }
clap = { version = "^4", features = ["derive"] }

